# OpenCV_SquashTracking

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
SquashBallTracker/: App.cpp  App.hpp  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.hpp  ObjectDetector.cpp  ObjectDetector.hpp  ProjectileMaths.cpp  ProjectileMaths.hpp  SBT2.cpp  SBT2.sln  SBT2.vcxproj  SBT2.vcxproj.filters  Tracker.cpp  Tracker.hpp  TrajectoryPreditor.cpp  TrajectoryPreditor.hpp  main.cpp  main.h
